--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch:dev": "nodemon",
+    "dev": "NODE_ENV=development node ./bin/www",
+    "prod": "NODE_ENV=production node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,6 +15,19 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.6"
+  },
+  "nodemonConfig": {
+    "exec": "yarn dev",
+    "watch": [
+      "src/*"
+    ],
+    "ignore": [
+      "node_modules/",
+      "**/__tests__",
+      "*.test.js",
+      "*.spec.js"
+    ]
   }
 }
