--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./src/bin/www",
     "watch:dev": "nodemon",
-    "dev": "NODE_ENV=development node ./bin/www",
-    "prod": "NODE_ENV=production node ./bin/www"
+    "dev": "DEBUG=tracer:* NODE_ENV=development node ./src/bin/www",
+    "prod": "NODE_ENV=production node ./src/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "debug": "^4.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.10.14",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6"
   },
