--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.10.14",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "socket.io": "^3.0.1"
   },
   "nodemonConfig": {
     "exec": "yarn dev",
